[package]
name = "numberconverter"
author = ["Utilitycoder"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
num_base = "0.4.2"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
